alignment fix

--- a/web/sites/default/themes/ubnext/less/navigation-landing.less
+++ b/web/sites/default/themes/ubnext/less/navigation-landing.less
@@ -95,7 +95,14 @@
               font-size: 12px;
               text-decoration: none;
               margin-left: 5px;
-              margin-top: 7px;
+              margin-top: 6px;
+            }
+          }
+          &.secondary {
+            a {
+              .fa {
+                margin-top: 4px;
+              }
             }
           }
 
